# C-Project-2022b

./: CMakeLists.txt  README.md  common_utils.c  common_utils.h  compiler  consts.c  consts.h  decodedline.c  decodedline.h  decoder.c  directives.c  directives.h  errors.ob  firstrun.c  firstrun.h  hara.am  hara.as  hara.ent  hara.ext  hara.ob  main.c  main.h  makefile  operation.c  operations.c  operations.h  preprocessing.c  preprocessing.h
examples/: errors.rar
examples/errors/: data_invalid_number.out  data_no_operands.out  empty_entry_declaration.am  empty_entry_declaration.as  empty_entry_declaration.out  empty_extern_declaration.am  empty_extern_declaration.as  empty_extern_declaration.out  empty_label_declaration.am  empty_label_declaration.as  empty_label_declaration.out  entry_declaration_as_extern.am  entry_declaration_as_extern.as  entry_declaration_as_extern.out  entry_name_is_a_keyword.as  entry_name_is_a_keyword.out  entry_name_too_long.am  entry_name_too_long.as  entry_name_too_long.out  entry_not_initialized.am  entry_not_initialized.as  entry_not_initialized.out  entry_too_many_operands.am  entry_too_many_operands.as  entry_too_many_operands.out  extern_name_is_a_keyword.am  extern_name_is_a_keyword.as  extern_name_is_a_keyword.out  extern_name_too_long.am  (+75 more)
helpers/: common_utils.c  common_utils.h  consts.c  consts.h
processing/: firstrun.c  firstrun.h  preprocessing.c  preprocessing.h  secondrun.c  secondrun.h
types/: decodedline.c  decodedline.h  directives.c  directives.h  entry.h  extern.h  macro.h  operations.c  operations.h  symbol.h
(+26 files in other folders)
